1999-07-04  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d (GENERATIONAL_GC): Don't define on IRIX.

1999-07-04  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * makemake.in (NLS_INCLUDES): Add nls_iso8859_10, nls_iso8859_13.
        * encoding.d: Include them.
          (nls_tables): Refer to them.
        * pseudofun.d: Likewise.

1999-06-25  Sam Steingold  <sds@goems.com>

	* describe.lsp (apropos): print the macro for symbol-macro, no
	evaluation.
	(describe-object): ditto.
	Also, describe CAR & CDR for a simple cons.

1999-06-24  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Don't use Unicode API on Win32. It does not work on Win95.
        * lispbibl.d, win32.d, spvw.d, spvw_debug.d, spvw_language.d,
          spvw_memfile.d, encoding.d, charstrg.d, pathname.d, stream.d,
          misc.d, error.d, errwin32.d, win32aux.d: Revert most of 1999-06-20
          patch.

1999-06-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * pathname.d (asciz_dir_to_pathname_): Change declaration of pathbuf.
        * errwin32.d (OS_error_internal_body): Fix compilation error.

1999-06-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Try to solve startup problems on Win95.
        * spvw.d (main) [TRIVIALMAP_MEMORY]: Call prepare_zeromap with
          shrinkp=FALSE.

1999-06-20  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Determine the initial encoding by examining the user's locale.
        * lispbibl.d (init_dependent_encodings): New declaration.
        * spvw_ctype.d: New file.
        * spvw.d: Include <string.h> always.
          Include spvw_ctype.d.
          (main): Remove LC_CTYPE code, instead call `init_ctype'. Later, call
          `init_dependent_encodings'.
        * encoding.d (init_dependent_encodings): New function, moved out of
          init_encodings. default-file-encoding and the others depend on
          locale_charset.